--- a/RTRS/RTRS/Base.lproj/Main.storyboard
+++ b/RTRS/RTRS/Base.lproj/Main.storyboard
@@ -191,11 +191,6 @@
                                 </connections>
                             </tableViewCell>
                         </prototypes>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="color" keyPath="searchField.textColor">
-                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
                         <connections>
                             <outlet property="dataSource" destination="bOP-We-QCa" id="DtO-br-sUh"/>
                             <outlet property="delegate" destination="bOP-We-QCa" id="fdW-tF-9y3"/>
@@ -554,7 +549,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FGX-MN-ai2">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="142" width="414" height="671"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eFf-2u-ibE">
                                         <rect key="frame" x="169.5" y="352" width="75" height="21"/>
@@ -566,22 +561,34 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstItem="eFf-2u-ibE" firstAttribute="centerX" secondItem="FGX-MN-ai2" secondAttribute="centerX" id="HSM-2D-6Cb"/>
-                                    <constraint firstItem="eFf-2u-ibE" firstAttribute="centerY" secondItem="FGX-MN-ai2" secondAttribute="centerY" id="TyD-JY-5k9"/>
+                                    <constraint firstItem="eFf-2u-ibE" firstAttribute="centerY" secondItem="FGX-MN-ai2" secondAttribute="centerY" constant="27" id="TyD-JY-5k9"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mHH-u7-XvV">
+                                <rect key="frame" x="20" y="102" width="18" height="22"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="xmark" catalog="system"/>
+                                <connections>
+                                    <action selector="dismissButtonPressed:" destination="61u-pN-KfT" eventType="touchUpInside" id="K7D-FN-BSP"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="FGX-MN-ai2" firstAttribute="top" secondItem="tB5-Lu-fqO" secondAttribute="top" id="DfG-tG-S7S"/>
+                            <constraint firstItem="FGX-MN-ai2" firstAttribute="top" secondItem="tB5-Lu-fqO" secondAttribute="top" constant="54" id="DfG-tG-S7S"/>
+                            <constraint firstItem="mHH-u7-XvV" firstAttribute="leading" secondItem="1KT-Wt-aGl" secondAttribute="leading" constant="20" id="GZI-4I-6kN"/>
                             <constraint firstItem="FGX-MN-ai2" firstAttribute="centerX" secondItem="1KT-Wt-aGl" secondAttribute="centerX" id="HO0-8e-7qW"/>
                             <constraint firstItem="FGX-MN-ai2" firstAttribute="bottom" secondItem="tB5-Lu-fqO" secondAttribute="bottom" id="Qfl-yV-sYU"/>
+                            <constraint firstItem="mHH-u7-XvV" firstAttribute="top" secondItem="tB5-Lu-fqO" secondAttribute="top" constant="14" id="czD-Vh-5xx"/>
                             <constraint firstItem="FGX-MN-ai2" firstAttribute="leading" secondItem="tB5-Lu-fqO" secondAttribute="leading" id="jFU-ee-U0z"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="tB5-Lu-fqO"/>
                     </view>
                     <navigationItem key="navigationItem" id="nsO-ug-vN0"/>
                     <connections>
+                        <outlet property="dismissButton" destination="mHH-u7-XvV" id="5fH-DS-vBs"/>
                         <outlet property="webViewContainer" destination="FGX-MN-ai2" id="sq2-OC-sKX"/>
+                        <outlet property="webViewContainerTopConstraint" destination="DfG-tG-S7S" id="LVd-G5-Uwg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WB6-sZ-nuB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -831,6 +838,7 @@
         <image name="RickyLogo" width="425" height="530"/>
         <image name="Skip-Back" width="25" height="25"/>
         <image name="Skip-Forward" width="25" height="25"/>
+        <image name="xmark" catalog="system" width="64" height="56"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Zeb-4G-3Q6"/>
